# lg-demo

./: .env.example  .gitignore  README.md  mcp_tools.json  pyproject.toml
demo_agent/: agent.py  telemetry.py  tools.py
deployment/: deploy.py
scripts/: invoke_non_interactive.py  invoke_reasoning_engine.py  test_local.py
